--- a/.env.example
+++ b/.env.example
@@ -68,10 +68,10 @@ ENVIRONMENT=development
 # LangGraph Communication Services (Template)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_WHATSAPP_NUMBER=your_whatsapp_number
+TWILIO_WHATSAPP_NUMBER=+14155238886
 GMAIL_EMAIL=your_gmail_email
 GMAIL_APP_PASSWORD=your_gmail_app_password
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-TELEGRAM_BOT_USERNAME=your_telegram_bot_username
+TELEGRAM_BOT_TOKEN=8260513283:AAFoYOeQKEcYdoFOtBTi7ZgsuPt_YNlgvCo
+TELEGRAM_BOT_USERNAME=BHIV_HR_PLATFORM_ASSISTANT_bot
 GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-pro
