--- a/deployment/docker/docker-compose.production.yml
+++ b/deployment/docker/docker-compose.production.yml
@@ -21,7 +21,7 @@ services:
     environment:
       POSTGRES_DB: bhiv_hr
       POSTGRES_USER: bhiv_user
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-bhiv_local_password_2025}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-your_password}
     ports:
       - "5432:5432"
     volumes:
@@ -42,7 +42,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-bhiv_local_password_2025}@db:5432/bhiv_hr
+      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-your_password}@db:5432/bhiv_hr
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
       AGENT_SERVICE_URL: http://agent:9000
@@ -60,7 +60,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    # Production URL: bhiv-hr-gateway-ltg0.onrender.com (✅ 79 endpoints operational)
 
   agent:
     build:
@@ -69,7 +68,7 @@ services:
     ports:
       - "9000:9000"
     environment:
-      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-bhiv_local_password_2025}@db:5432/bhiv_hr
+      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-your_password}@db:5432/bhiv_hr
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
       CANDIDATE_JWT_SECRET_KEY: ${CANDIDATE_JWT_SECRET_KEY:-<YOUR_CANDIDATE_JWT_SECRET>}
@@ -83,7 +82,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    # Production URL: bhiv-hr-agent-nhgg.onrender.com (✅ 6 endpoints operational)
 
   portal:
     build:
@@ -112,7 +110,6 @@ services:
         limits:
           memory: 512M
           cpus: '0.5'
-    # Production URL: bhiv-hr-portal-u670.onrender.com (✅ Healthy)
 
   client_portal:
     build:
@@ -125,7 +122,7 @@ services:
       AGENT_SERVICE_URL: http://agent:9000
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
-      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-bhiv_local_password_2025}@db:5432/bhiv_hr
+      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-your_password}@db:5432/bhiv_hr
     depends_on:
       gateway:
         condition: service_healthy
@@ -141,7 +138,6 @@ services:
         limits:
           memory: 512M
           cpus: '0.5'
-    # Production URL: bhiv-hr-client-portal-3iod.onrender.com (✅ Healthy)
 
   candidate_portal:
     build:
@@ -154,7 +150,7 @@ services:
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
       CANDIDATE_JWT_SECRET_KEY: ${CANDIDATE_JWT_SECRET_KEY:-<YOUR_CANDIDATE_JWT_SECRET>}
-      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-bhiv_local_password_2025}@db:5432/bhiv_hr
+      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-your_password}@db:5432/bhiv_hr
     depends_on:
       gateway:
         condition: service_healthy
@@ -170,7 +166,6 @@ services:
         limits:
           memory: 512M
           cpus: '0.5'
-    # Production URL: bhiv-hr-candidate-portal-abe6.onrender.com (✅ Live)
 
   langgraph:
     build:
@@ -179,19 +174,19 @@ services:
     ports:
       - "9001:9001"
     environment:
-      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-bhiv_local_password_2025}@db:5432/bhiv_hr
+      DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-your_password}@db:5432/bhiv_hr
       GATEWAY_SERVICE_URL: http://gateway:8000
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
       CANDIDATE_JWT_SECRET_KEY: ${CANDIDATE_JWT_SECRET_KEY:-<YOUR_CANDIDATE_JWT_SECRET>}
-      TWILIO_ACCOUNT_SID: ${TWILIO_ACCOUNT_SID:-test_account_sid}
-      TWILIO_AUTH_TOKEN: ${TWILIO_AUTH_TOKEN:-test_auth_token}
-      TWILIO_WHATSAPP_NUMBER: ${TWILIO_WHATSAPP_NUMBER:-+15005550006}
-      GMAIL_EMAIL: ${GMAIL_EMAIL:-test@gmail.com}
-      GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD:-test_password}
-      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-test_bot_token}
-      TELEGRAM_BOT_USERNAME: ${TELEGRAM_BOT_USERNAME:-@test_bot}
-      GEMINI_API_KEY: ${GEMINI_API_KEY:-your-gemini-api-key}
+      TWILIO_ACCOUNT_SID: ${TWILIO_ACCOUNT_SID:-<YOUR_TWILIO_ACCOUNT_SID>}
+      TWILIO_AUTH_TOKEN: ${TWILIO_AUTH_TOKEN:-<YOUR_TWILIO_AUTH_TOKEN>}
+      TWILIO_WHATSAPP_NUMBER: ${TWILIO_WHATSAPP_NUMBER:-<YOUR_WHATSAPP_NUMBER>}
+      GMAIL_EMAIL: ${GMAIL_EMAIL:-<YOUR_GMAIL_EMAIL>}
+      GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD:-<YOUR_GMAIL_APP_PASSWORD>}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-<YOUR_TELEGRAM_BOT_TOKEN>}
+      TELEGRAM_BOT_USERNAME: ${TELEGRAM_BOT_USERNAME:-<YOUR_TELEGRAM_BOT_USERNAME>}
+      GEMINI_API_KEY: ${GEMINI_API_KEY:-<YOUR_GEMINI_API_KEY>}
       GEMINI_MODEL: ${GEMINI_MODEL:-gemini-pro}
       ENVIRONMENT: production
       LOG_LEVEL: INFO
